Added post and get event functionality
